<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>
    <string name="top_headline_pagination">Top Headlines Pagination</string>
    <string name="offline_articles">Offline Articles</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_sources">News Sources</string>
    <string name="countries">Countries</string>
    <string name="languages">Languages</string>
    <string name="search">Search</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="retry">Retry</string>
</resources>